--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,9 +126,11 @@
   body {
     @apply bg-background text-foreground;
   }
+
   button {
     cursor: pointer;
   }
+
   .heading-xl {
     font-family: var(--font-sans);
     font-size: 3rem;
@@ -136,6 +138,7 @@
     font-weight: 700;
     letter-spacing: -0.01em;
   }
+
   .heading-lg {
     font-family: var(--font-sans);
     font-size: 2.25rem;
@@ -143,6 +146,7 @@
     font-weight: 700;
     letter-spacing: -0.01em;
   }
+
   .heading-md {
     font-family: var(--font-sans);
     font-size: 1.875rem;
@@ -150,6 +154,7 @@
     font-weight: 700;
     letter-spacing: -0.01em;
   }
+
   .heading-sm {
     font-family: var(--font-sans);
     font-size: 1.5rem;
@@ -157,58 +162,73 @@
     font-weight: 700;
     letter-spacing: -0.01em;
   }
+
   .container-padding-x {
     padding-inline: 1.5rem;
   }
+
   .section-padding-y {
     padding-block: 6rem;
   }
+
   .section-title-gap-xl {
     gap: 1.5rem;
   }
+
   .section-title-gap-lg {
     gap: 1.25rem;
   }
+
   .section-title-gap-md {
     gap: 1.25rem;
   }
+
   .section-title-gap-sm {
     gap: 1rem;
   }
 }
 
-@media (max-width: 64rem) {
+@media (width <= 64rem) {
   .heading-xl {
     font-size: 1.875rem;
     line-height: 1.2;
   }
+
   .heading-lg {
     font-size: 1.875rem;
     line-height: 1.2;
   }
+
   .heading-md {
     font-size: 1.5rem;
     line-height: 1.2;
   }
+
   .heading-sm {
     font-size: 1.5rem;
     line-height: 1.333;
   }
+
   .container-padding-x {
     padding-inline: 1.5rem;
   }
+
   .section-padding-y {
     padding-block: 4rem;
   }
+
   .section-title-gap-xl {
     gap: 1rem;
   }
+
   .section-title-gap-lg {
     gap: 1rem;
   }
+
   .section-title-gap-md {
     gap: 1rem;
   }
+
   .section-title-gap-sm {
     gap: 1rem;
   }
